# boc-physics

./: .flake8  .gitignore  LICENSE  PLAN-narrow.md  PLAN-repr.md  PLAN.md  README.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/agents/: editor-lens.agent.md
.github/skills/finalize-pr/: SKILL.md
.github/skills/testing-with-boc/: SKILL.md
.github/workflows/: ci.yml  release.yml
bench/: boc_width.py  drop_box.py  profile_narrow.py  stack_stability.py  tutorial_figures.py
docs/: conf.py  index.md
docs/api/: bodies.rst  cli.rst  detection.rst  engine.rst  index.rst  parallel.rst  rendering.rst  scenes.rst
docs/concepts/: boc-in-bocphysics.md  engine-step.md  index.rst  parallel-solver.md  scene-model.md
docs/tutorial/: 01-rigid-body-physics.md  02-serial-engine.md  03-batching.md  04-converting-to-boc.md  05-experiments.md  06-future-work.md  07-references.md  index.md
refs/: README.md
scripts/: build_sbom.py  validate_sbom.py  validate_wheel.py
src/bocphysics/: __init__.py  bodies.py  collisions.py  config.py  contacts.py  detection.py  engine.py  geometry.py  kernel.py  parallel.py  patches.py  physics.py  quadtree.py  render.py  scene.py  simulation.py  solver.py  spawn.py  transport.py  xpbd.py  xpbd_kernel.py
test/: test_bodies.py  test_build_sbom.py  test_collisions.py  test_contacts.py  test_engine.py  test_geometry.py  test_kernel.py  test_matrix_math.py  test_parallel.py  test_patches.py  test_physics.py  test_render.py  test_scene.py  test_solver.py  test_spawn.py  test_transport.py  test_validate_sbom.py  test_validate_wheel.py  test_worker_count.py  test_xpbd.py  test_xpbd_kernel.py
