[build-system]
requires = ["setuptools >= 64"]
build-backend = "setuptools.build_meta"

[project]
name =  "bocphysics"
version = "0.3"
authors = [
    { name="Matthew Johnson", email="mj293@cam.ac.uk" },
]
description = "2D rigid body physical simulation using boc"
dependencies = [
    "bocpy==0.12.0",
    "pyglet",
    "webcolors"
]

[project.optional-dependencies]
test = [
    "pytest"
]
lint = [
    "flake8>=7.3.0",
    "flake8-bugbear>=25.11.29",
    "flake8-builtins>=3.1.0",
    "flake8-docstrings>=1.7.0",
    "flake8-encodings>=0.5.1",
    "flake8-import-order>=0.19.2",
    "flake8-quotes>=3.4.0",
    "pep8-naming>=0.15.1",
]

[project.scripts]
simulation = "bocphysics:main"

[tool.setuptools.packages.find]
where = ["src"]
